--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
     <div>Weapon: Dual Colts</div>
   </div>
 
+  <!-- New Top Right Health -->
+  <div id="health-display"
+    style="position: absolute; top: 20px; right: 20px; display: flex; align-items: center; gap: 15px; font-family: 'Courier New', monospace; font-weight: bold; color: #ff3333; text-shadow: 2px 2px 0 #000; font-size: 40px; pointer-events: none; z-index: 100;">
+    <span style="font-size: 50px;">❤️</span>
+    <span id="health-value">100</span>
+  </div>
+
   <div id="shop-menu"
     style="display:none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 800px; height: 600px; background: rgba(50, 30, 10, 0.95); border: 4px solid gold; border-radius: 10px; color: white; padding: 20px; z-index: 2000; font-family: 'Courier New', monospace;">
     <h1 style="text-align: center; color: gold; margin-top: 0;">ОРУЖЕЙНИК</h1>
