--- a/index.html
+++ b/index.html
@@ -1,186 +1,205 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>3D Shooter - University Project</title>
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      background: #000;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Western Duel - 3D Shooter</title>
+    <style>
+        body { margin: 0; overflow: hidden; background: #000; font-family: 'Courier New', monospace; }
+        #game-container { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+        
+        /* UI Layer */
+        #crosshair {
+            position: absolute; top: 50%; left: 50%;
+            width: 20px; height: 20px;
+            border: 2px solid lime; border-radius: 50%;
+            transform: translate(-50%, -50%);
+            pointer-events: none; z-index: 100;
+            display: none;
+        }
 
-    #game-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
+        #player-stats {
+            position: absolute; top: 20px; left: 20px;
+            color: gold; font-size: 24px; font-weight: bold;
+            text-shadow: 2px 2px 0 #000; pointer-events: none; z-index: 100;
+            display: none;
+        }
 
-    #ui-layer {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 20px;
-      box-sizing: border-box;
-    }
+        /* Main Menu */
+        #main-menu {
+            position: absolute; width: 100%; height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            display: flex; flex-direction: column;
+            align-items: center; justify-content: center;
+            z-index: 200;
+        }
 
-    #crosshair {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 20px;
-      height: 20px;
-      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="2" fill="lime"/><line x1="0" y1="10" x2="6" y2="10" stroke="lime" stroke-width="2"/><line x1="14" y1="10" x2="20" y2="10" stroke="lime" stroke-width="2"/><line x1="10" y1="0" x2="10" y2="6" stroke="lime" stroke-width="2"/><line x1="10" y1="14" x2="10" y2="20" stroke="lime" stroke-width="2"/></svg>') no-repeat center center;
-      background-size: contain;
-      transform: translate(-50%, -50%);
-    }
+        .menu-btn {
+            background: #8b4513; color: #ffcc99;
+            border: 4px solid #5a2e0c; padding: 15px 40px;
+            font-size: 30px; font-weight: bold; cursor: pointer;
+            margin: 10px; transition: 0.2s; width: 300px; text-align: center;
+            user-select: none;
+        }
 
-    .hud-text {
-      color: white;
-      text-shadow: 1px 1px 2px black;
-      font-size: 24px;
-      font-weight: bold;
-    }
+        .menu-btn:hover { background: #a0522d; transform: scale(1.05); color: #fff; }
 
-    #instructions {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      text-align: center;
-      background: rgba(0, 0, 0, 0.7);
-      padding: 20px;
-      border-radius: 10px;
-      border: 2px solid lime;
-      pointer-events: auto;
-      cursor: pointer;
-    }
-
-    .hidden {
-      display: none !important;
-    }
-  </style>
+        h1 { font-size: 60px; color: #ffaa00; text-shadow: 4px 4px 0 #000; }
+        p { color: #aaa; text-align: center; }
+    </style>
 </head>
-
 <body>
-  <div id="game-container"></div>
-  <!-- HUD -->
-  <div id="crosshair">+</div>
-  <div id="hit-marker" style="
-      position: absolute; 
-      top: 50%; 
-      left: 50%; 
-      transform: translate(-50%, -50%); 
-      width: 40px; 
-      height: 40px; 
-      pointer-events: none; 
-      opacity: 0; 
-      transition: opacity 0.1s;
-      z-index: 99;
-  ">
-    <svg width="40" height="40" viewBox="0 0 40 40">
-      <line x1="10" y1="10" x2="30" y2="30" stroke="red" stroke-width="4" />
-      <line x1="30" y1="10" x2="10" y2="30" stroke="red" stroke-width="4" />
-    </svg>
-  </div>
-  <div id="health" style="display:none;">Health: 100</div>
-  <div id="player-stats"
-    style="position: absolute; top: 20px; left: 20px; color: gold; font-family: 'Courier New', monospace; font-size: 24px; font-weight: bold; text-shadow: 2px 2px 0 #000; line-height: 1.5; pointer-events: none;">
-    <div>Level: 1 (Kills: 0)</div>
-    <div>Money: $0</div>
-    <div>Weapon: Dual Colts</div>
-  </div>
 
-  <!-- New Top Right Health -->
-  <div id="health-display"
-    style="position: absolute; top: 20px; right: 20px; display: flex; align-items: center; gap: 15px; font-family: 'Courier New', monospace; font-weight: bold; color: #ff3333; text-shadow: 2px 2px 0 #000; font-size: 40px; pointer-events: none; z-index: 100;">
-    <span style="font-size: 50px;">❤️</span>
-    <span id="health-value">100</span>
-  </div>
+    <div id="game-container"></div>
+    <div id="crosshair"></div>
 
-  <div id="shop-menu"
-    style="display:none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 800px; height: 600px; background: rgba(50, 30, 10, 0.95); border: 4px solid gold; border-radius: 10px; color: white; padding: 20px; z-index: 2000; font-family: 'Courier New', monospace;">
-    <h1 style="text-align: center; color: gold; margin-top: 0;">ОРУЖЕЙНИК</h1>
-    <div style="text-align: center; margin-bottom: 20px;">Стрелки/Мышь: Выбор. Пробел/Клик: Купить. 'G' или 'Esc':
-      Закрыть.</div>
-
-    <div id="shop-items"
-      style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; height: 450px; overflow-y: auto;">
-      <!-- Items injected by JS -->
-    </div>
-  </div>
-  <div id="main-menu">
-    <h1 style="font-size: 60px; color: #ffaa00; text-shadow: 4px 4px 0 #000; margin-bottom: 40px;">WESTERN DUEL</h1>
-
-    <div class="menu-btn" id="btn-start">ИГРАТЬ</div>
-
-    <div style="margin: 20px 0; display:flex; flex-direction:column; align-items:center;">
-      <span style="color:white; font-size: 24px; margin-bottom: 5px;">СЛОЖНОСТЬ: </span>
-      <button id="btn-diff" class="menu-btn" style="width: 250px; font-size: 20px;">НОРМАЛЬНО</button>
+    <div id="player-stats">
+        <div>Kills: <span id="kill-count">0</span></div>
+        <div>Health: 100</div>
     </div>
 
-    <!-- <div class="menu-btn" id="btn-exit">ВЫХОД</div> -->
+    <div id="main-menu">
+        <h1>WESTERN DUEL</h1>
+        <div class="menu-btn" id="btn-start">ИГРАТЬ</div>
+        <p>
+            WASD - Движение | Мышь - Обзор<br>
+            КЛИК - Стрельба | ESC - Меню
+        </p>
+    </div>
 
-    <p style="color: #aaa; margin-top: 40px; text-align:center;">
-      WASD - Ходить | ПРОБЕЛ - Прыжок | КЛИК - Огонь<br>
-      R - Перезарядка | G - Магазин | T - Рация
-    </p>
-  </div>
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+            }
+        }
+    </script>
 
-  <style>
-    #main-menu {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('https://raw.githubusercontent.com/mrdoob/three.js/dev/examples/textures/terrain/grasslight-big.jpg');
-      background-size: cover;
-      /* Overlay dark */
-      box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
+    <script type="module">
+        import * as THREE from 'three';
+        import { PointerLockControls } from 'three/addons/controls/PointerLockControls.js';
 
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      z-index: 10;
-    }
+        // --- Инициализация сцены ---
+        const scene = new THREE.Scene();
+        scene.background = new THREE.Color(0x87ceeb); // Небо
+        scene.fog = new THREE.Fog(0x87ceeb, 0, 50);
 
-    .menu-btn {
-      background: #8b4513;
-      color: #ffcc99;
-      border: 4px solid #5a2e0c;
-      padding: 15px 40px;
-      font-size: 30px;
-      font-family: 'Courier New', Courier, monospace;
-      font-weight: bold;
-      cursor: pointer;
-      margin: 10px;
-      transition: 0.2s;
-      text-align: center;
-      width: 300px;
-    }
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        const renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.getElementById('game-container').appendChild(renderer.domElement);
 
-    .menu-btn:hover {
-      background: #a0522d;
-      transform: scale(1.05);
-      color: #fff;
-    }
-  </style>
-  <script type="module" src="/src/main.js"></script>
+        // --- Свет ---
+        const light = new THREE.HemisphereLight(0xeeeeff, 0x777788, 1);
+        scene.add(light);
+
+        // --- Земля ---
+        const floorGeometry = new THREE.PlaneGeometry(100, 100);
+        const floorMaterial = new THREE.MeshPhongMaterial({ color: 0x3d2b1f });
+        const floor = new THREE.Mesh(floorGeometry, floorMaterial);
+        floor.rotation.x = -Math.PI / 2;
+        scene.add(floor);
+
+        // --- Цели (враги) ---
+        const targets = [];
+        function createTarget() {
+            const geometry = new THREE.BoxGeometry(1, 2, 1);
+            const material = new THREE.MeshLambertMaterial({ color: 0xff0000 });
+            const box = new THREE.Mesh(geometry, material);
+            box.position.set(Math.random() * 20 - 10, 1, Math.random() * 20 - 10);
+            scene.add(box);
+            targets.push(box);
+        }
+        for(let i=0; i<5; i++) createTarget();
+
+        // --- Управление ---
+        const controls = new PointerLockControls(camera, document.body);
+        const startBtn = document.getElementById('btn-start');
+        const menu = document.getElementById('main-menu');
+        const crosshair = document.getElementById('crosshair');
+        const stats = document.getElementById('player-stats');
+
+        startBtn.addEventListener('click', () => {
+            controls.lock(); // Захват мыши и старт
+        });
+
+        controls.addEventListener('lock', () => {
+            menu.style.display = 'none';
+            crosshair.style.display = 'block';
+            stats.style.display = 'block';
+        });
+
+        controls.addEventListener('unlock', () => {
+            menu.style.display = 'flex';
+            crosshair.style.display = 'none';
+            stats.style.display = 'none';
+        });
+
+        // --- Стрельба ---
+        let kills = 0;
+        const raycaster = new THREE.Raycaster();
+        const mouse = new THREE.Vector2(0, 0); // Центр экрана
+
+        window.addEventListener('click', () => {
+            if (!controls.isLocked) return;
+
+            raycaster.setFromCamera(mouse, camera);
+            const intersects = raycaster.intersectObjects(targets);
+
+            if (intersects.length > 0) {
+                const target = intersects[0].object;
+                // Анимация попадания и респаун
+                target.position.set(Math.random() * 20 - 10, 1, Math.random() * 20 - 10);
+                kills++;
+                document.getElementById('kill-count').innerText = kills;
+            }
+        });
+
+        // --- Движение ---
+        const velocity = new THREE.Vector3();
+        const direction = new THREE.Vector3();
+        const moveKeys = { w: false, a: false, s: false, d: false };
+
+        window.addEventListener('keydown', (e) => moveKeys[e.key.toLowerCase()] = true);
+        window.addEventListener('keyup', (e) => moveKeys[e.key.toLowerCase()] = false);
+
+        // --- Главный цикл анимации ---
+        let prevTime = performance.now();
+        function animate() {
+            requestAnimationFrame(animate);
+
+            if (controls.isLocked) {
+                const time = performance.now();
+                const delta = (time - prevTime) / 1000;
+
+                velocity.x -= velocity.x * 10.0 * delta;
+                velocity.z -= velocity.z * 10.0 * delta;
+
+                direction.z = Number(moveKeys.w) - Number(moveKeys.s);
+                direction.x = Number(moveKeys.d) - Number(moveKeys.a);
+                direction.normalize();
+
+                if (moveKeys.w || moveKeys.s) velocity.z -= direction.z * 400.0 * delta;
+                if (moveKeys.a || moveKeys.d) velocity.x -= direction.x * 400.0 * delta;
+
+                controls.moveRight(-velocity.x * delta);
+                controls.moveForward(-velocity.z * delta);
+
+                prevTime = time;
+            }
+
+            renderer.render(scene, camera);
+        }
+
+        animate();
+
+        // Ресайз окна
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
+    </script>
 </body>
-
 </html>
