--- a/index.html
+++ b/index.html
@@ -1,53 +1,101 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Western Duel - 3D Shooter</title>
     <style>
-        body { margin: 0; overflow: hidden; background: #000; font-family: 'Courier New', monospace; }
-        #game-container { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-        
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: #000;
+            font-family: 'Courier New', monospace;
+        }
+
+        #game-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
         /* UI Layer */
         #crosshair {
-            position: absolute; top: 50%; left: 50%;
-            width: 20px; height: 20px;
-            border: 2px solid lime; border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 20px;
+            height: 20px;
+            border: 2px solid lime;
+            border-radius: 50%;
             transform: translate(-50%, -50%);
-            pointer-events: none; z-index: 100;
+            pointer-events: none;
+            z-index: 100;
             display: none;
         }
 
         #player-stats {
-            position: absolute; top: 20px; left: 20px;
-            color: gold; font-size: 24px; font-weight: bold;
-            text-shadow: 2px 2px 0 #000; pointer-events: none; z-index: 100;
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            color: gold;
+            font-size: 24px;
+            font-weight: bold;
+            text-shadow: 2px 2px 0 #000;
+            pointer-events: none;
+            z-index: 100;
             display: none;
         }
 
         /* Main Menu */
         #main-menu {
-            position: absolute; width: 100%; height: 100%;
+            position: absolute;
+            width: 100%;
+            height: 100%;
             background: rgba(0, 0, 0, 0.8);
-            display: flex; flex-direction: column;
-            align-items: center; justify-content: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             z-index: 200;
         }
 
         .menu-btn {
-            background: #8b4513; color: #ffcc99;
-            border: 4px solid #5a2e0c; padding: 15px 40px;
-            font-size: 30px; font-weight: bold; cursor: pointer;
-            margin: 10px; transition: 0.2s; width: 300px; text-align: center;
+            background: #8b4513;
+            color: #ffcc99;
+            border: 4px solid #5a2e0c;
+            padding: 15px 40px;
+            font-size: 30px;
+            font-weight: bold;
+            cursor: pointer;
+            margin: 10px;
+            transition: 0.2s;
+            width: 300px;
+            text-align: center;
             user-select: none;
         }
 
-        .menu-btn:hover { background: #a0522d; transform: scale(1.05); color: #fff; }
+        .menu-btn:hover {
+            background: #a0522d;
+            transform: scale(1.05);
+            color: #fff;
+        }
 
-        h1 { font-size: 60px; color: #ffaa00; text-shadow: 4px 4px 0 #000; }
-        p { color: #aaa; text-align: center; }
+        h1 {
+            font-size: 60px;
+            color: #ffaa00;
+            text-shadow: 4px 4px 0 #000;
+        }
+
+        p {
+            color: #aaa;
+            text-align: center;
+        }
     </style>
 </head>
+
 <body>
 
     <div id="game-container"></div>
@@ -76,130 +124,7 @@
         }
     </script>
 
-    <script type="module">
-        import * as THREE from 'three';
-        import { PointerLockControls } from 'three/addons/controls/PointerLockControls.js';
-
-        // --- Инициализация сцены ---
-        const scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x87ceeb); // Небо
-        scene.fog = new THREE.Fog(0x87ceeb, 0, 50);
-
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-        const renderer = new THREE.WebGLRenderer({ antialias: true });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.getElementById('game-container').appendChild(renderer.domElement);
-
-        // --- Свет ---
-        const light = new THREE.HemisphereLight(0xeeeeff, 0x777788, 1);
-        scene.add(light);
-
-        // --- Земля ---
-        const floorGeometry = new THREE.PlaneGeometry(100, 100);
-        const floorMaterial = new THREE.MeshPhongMaterial({ color: 0x3d2b1f });
-        const floor = new THREE.Mesh(floorGeometry, floorMaterial);
-        floor.rotation.x = -Math.PI / 2;
-        scene.add(floor);
-
-        // --- Цели (враги) ---
-        const targets = [];
-        function createTarget() {
-            const geometry = new THREE.BoxGeometry(1, 2, 1);
-            const material = new THREE.MeshLambertMaterial({ color: 0xff0000 });
-            const box = new THREE.Mesh(geometry, material);
-            box.position.set(Math.random() * 20 - 10, 1, Math.random() * 20 - 10);
-            scene.add(box);
-            targets.push(box);
-        }
-        for(let i=0; i<5; i++) createTarget();
-
-        // --- Управление ---
-        const controls = new PointerLockControls(camera, document.body);
-        const startBtn = document.getElementById('btn-start');
-        const menu = document.getElementById('main-menu');
-        const crosshair = document.getElementById('crosshair');
-        const stats = document.getElementById('player-stats');
-
-        startBtn.addEventListener('click', () => {
-            controls.lock(); // Захват мыши и старт
-        });
-
-        controls.addEventListener('lock', () => {
-            menu.style.display = 'none';
-            crosshair.style.display = 'block';
-            stats.style.display = 'block';
-        });
-
-        controls.addEventListener('unlock', () => {
-            menu.style.display = 'flex';
-            crosshair.style.display = 'none';
-            stats.style.display = 'none';
-        });
-
-        // --- Стрельба ---
-        let kills = 0;
-        const raycaster = new THREE.Raycaster();
-        const mouse = new THREE.Vector2(0, 0); // Центр экрана
-
-        window.addEventListener('click', () => {
-            if (!controls.isLocked) return;
-
-            raycaster.setFromCamera(mouse, camera);
-            const intersects = raycaster.intersectObjects(targets);
-
-            if (intersects.length > 0) {
-                const target = intersects[0].object;
-                // Анимация попадания и респаун
-                target.position.set(Math.random() * 20 - 10, 1, Math.random() * 20 - 10);
-                kills++;
-                document.getElementById('kill-count').innerText = kills;
-            }
-        });
-
-        // --- Движение ---
-        const velocity = new THREE.Vector3();
-        const direction = new THREE.Vector3();
-        const moveKeys = { w: false, a: false, s: false, d: false };
-
-        window.addEventListener('keydown', (e) => moveKeys[e.key.toLowerCase()] = true);
-        window.addEventListener('keyup', (e) => moveKeys[e.key.toLowerCase()] = false);
-
-        // --- Главный цикл анимации ---
-        let prevTime = performance.now();
-        function animate() {
-            requestAnimationFrame(animate);
-
-            if (controls.isLocked) {
-                const time = performance.now();
-                const delta = (time - prevTime) / 1000;
-
-                velocity.x -= velocity.x * 10.0 * delta;
-                velocity.z -= velocity.z * 10.0 * delta;
-
-                direction.z = Number(moveKeys.w) - Number(moveKeys.s);
-                direction.x = Number(moveKeys.d) - Number(moveKeys.a);
-                direction.normalize();
-
-                if (moveKeys.w || moveKeys.s) velocity.z -= direction.z * 400.0 * delta;
-                if (moveKeys.a || moveKeys.d) velocity.x -= direction.x * 400.0 * delta;
-
-                controls.moveRight(-velocity.x * delta);
-                controls.moveForward(-velocity.z * delta);
-
-                prevTime = time;
-            }
-
-            renderer.render(scene, camera);
-        }
-
-        animate();
-
-        // Ресайз окна
-        window.addEventListener('resize', () => {
-            camera.aspect = window.innerWidth / window.innerHeight;
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight);
-        });
-    </script>
+    <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
