--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
         </p>
     </div>
 
+    <!-- Shop Menu -->
+    <div id="shop-menu"
+        style="display: none; position: absolute; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 300; color: white; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <h1 style="color: gold; text-shadow: 2px 2px 0 #000;">МАГАЗИН ОРУЖИЯ</h1>
+        <div id="shop-items"
+            style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; max-width: 1000px;">
+            <!-- Items injected by JS -->
+        </div>
+        <div style="margin-top: 30px; color: #aaa;">Нажми [G] или [ESC] чтобы закрыть</div>
+    </div>
+
     <script type="importmap">
         {
             "imports": {
