--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
 
         <!-- Scope Circle & Vignette -->
         <div
-            style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 80vh; height: 80vh; border-radius: 50%; box-shadow: 0 0 0 100vw #000, inset 0 0 40px rgba(0,0,0,0.8); border: 20px solid #5a4a2d; background: rgba(255, 240, 200, 0.1);">
+            style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 80vh; height: 80vh; border-radius: 50%; box-shadow: 0 0 0 100vw #000, inset 0 0 40px rgba(0,0,0,0.8); border: 20px solid #5a4a2d; background: rgba(255, 240, 200, 0.1); pointer-events: none;">
         </div>
 
         <!-- Crosshair (Simple Black Lines) -->
         <div
-            style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 78vh; height: 2px; background: rgba(0,0,0,0.8);">
+            style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 78vh; height: 2px; background: rgba(0,0,0,0.8); pointer-events: none;">
         </div>
         <div
-            style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 2px; height: 78vh; background: rgba(0,0,0,0.8);">
+            style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 2px; height: 78vh; background: rgba(0,0,0,0.8); pointer-events: none;">
         </div>
 
         <!-- Lens Dirt / Scratch Effect (Optional subtle texture) -->
