Update: v1.5 version indicator to verify deploy

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
 
     <div id="main-menu">
-        <h1>WESTERN DUEL</h1>
+        <h1>WESTERN DUEL <span style="font-size: 20px; color: gold;">v1.5</span></h1>
         <div class="menu-btn" id="btn-start">ИГРАТЬ</div>
         <p>
             WASD - Движение | Мышь - Обзор<br>
